Fix alignment and spacing of bookmark checkbox

--- a/app/assets/stylesheets/modules/bookmarks.scss
+++ b/app/assets/stylesheets/modules/bookmarks.scss
@@ -1,15 +1,24 @@
-.toggle-bookmark span {
-  font-size: 0.9em;
+ // Note that Blacklight uses .toggle-bookmark at three different levels!
+div.toggle-bookmark {
+  label.toggle-bookmark {
+    min-width: 0; // override blacklight
+    cursor: pointer;
+
+    input.toggle-bookmark {
+      margin-right: 3px;
+    }
+
+    span {
+      font-size: 0.9em;
+      display: inline-block;
+      margin-bottom: 4px;
+      vertical-align: middle;
+    }
+  }
 }
 
 .index-document-functions {
   text-align: right;
-}
-
-label {
-  &.toggle-bookmark {
-    min-width: 0;
-  }
 }
 
 #select_all-dropdown {
